DB 공통 설정으로 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/hereinkorea
-    username: testing
-    password: asdqwe123!@#
+    username: hereuser
+    password: hereuser123!@#
 
   jpa:
     hibernate:
