--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "cors": "^2.8.5",
     "react-responsive-carousel": "^3.2.23"
   }
 }
