--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://hereinkorea.cpo40e060m0q.ap-northeast-2.rds.amazonaws.com:3306/hereinkorea?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: admin
-    password: admin456$%^
+    username: hereuser
+    password: hereuser456$%^
 
   jpa:
     hibernate:
