--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.2'
+
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta' // Querydsl JPA 라이브러리
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta" // 쿼리타입(q)을 생성할 때 필요한 라이브러리
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
