gradle,idea,build 파일 들어가지않게 이그노어 수정

--- a/src/main/frontend/.gitignore
+++ b/src/main/frontend/.gitignore
@@ -21,3 +21,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Gradle
+
+# Gradle
+.gradle/
+
+# IntelliJ IDEA-specific files
+.idea/
+
+# Build directory
+/build/
